# RecoveryApp

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/coderx/datarescuepro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  datarescue.cpp  disk_analyzer.cpp  disk_analyzer.h  disk_scanner.cpp  disk_scanner.h  file_recovery_engine.cpp  file_recovery_engine.h  file_scanner.cpp  file_scanner.h  native-lib.cpp
app/src/main/java/com/coderx/datarescuepro/: DataRescueApplication.kt  MainActivity.kt
app/src/main/java/com/coderx/datarescuepro/core/: FileRecoveryEngine.kt
app/src/main/java/com/coderx/datarescuepro/core/recovery/: FileRecoveryEngine.kt
app/src/main/java/com/coderx/datarescuepro/core/system/: RootDetector.kt
app/src/main/java/com/coderx/datarescuepro/data/model/: DeviceInfo.kt  RecoverableFile.kt
app/src/main/java/com/coderx/datarescuepro/navigation/: DataRescueNavigation.kt
app/src/main/java/com/coderx/datarescuepro/service/: FileRecoveryService.kt
app/src/main/java/com/coderx/datarescuepro/utils/: DeviceInfoProvider.kt  PermissionManager.kt
app/src/main/java/com/coderx/datarescuepro/viewmodel/: MainViewModel.kt  ResultsViewModel.kt  ScanViewModel.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/coderx/datarescuepro/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
